feat: implement dual-key rate limiting, cookie-based auth, and transaction verification hooks and payment hardening